chore(javafx): Fix test execution on CI
Co-authored-by: Gemini 3 Flash Preview
Signed-off-by: Stefan Niedermann <info@niedermann.it>